<resources>
    <string name="app_name">LAB6V2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="back">Back</string>
    <string name="filter">Filter</string>
    <string name="dateFrom">Date From</string>
    <string name="dateUntil">Date Until</string>
    <string name="personalInfo">Personal Information</string>
    <string name="save">Save</string>
    <string name="incomes">Incomes:</string>
    <string name="expenses">Expenses:</string>
    <string name="totalIncomes">Total incomes:</string>
    <string name="totalExpenses">Total expenses:</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>