<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IncomesExpensesActivity">

    <ListView
            android:layout_width="411dp"
            android:layout_height="381dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" android:id="@+id/listIncomesExpenses"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dateFrom" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.919"
            app:layout_constraintVertical_bias="0.023" android:hint="@string/dateFrom"/>
    <Button
            android:text="@string/filter"
            android:layout_width="160dp"
            android:layout_height="40dp" android:id="@+id/button3"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintVertical_bias="0.03" android:onClick="filter" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/dateUntil"/>
    <EditText
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dateUntil"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.919" app:layout_constraintVertical_bias="0.131"
            android:hint="@string/dateUntil"/>
    <TextView
            android:text="@string/incomes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/labelMoneyType"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.053" app:layout_constraintVertical_bias="0.022"
            android:textStyle="bold"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/labelAmount"
            android:textSize="18sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintVertical_bias="0.072"/>
</androidx.constraintlayout.widget.ConstraintLayout>