<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CategoriesActivityV1" android:id="@+id/layout">

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/labelIncomes"
            android:textSize="18sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintVertical_bias="0.135"/>
    <TextView
            android:text="@string/totalExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/labelMoneyType3"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.056" app:layout_constraintVertical_bias="0.189"
            android:textStyle="bold"/>
    <ListView
            android:layout_width="411dp"
            android:layout_height="433dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
            android:id="@+id/listCategories" app:layout_constraintHorizontal_bias="0.333"/>
    <Button
            android:text="@string/personalInfo"
            android:layout_width="143dp"
            android:layout_height="57dp" android:id="@+id/button4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024" android:onClick="loadUserUpdateWindow"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/labelExpenses"
            android:textSize="18sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintVertical_bias="0.189"/>
    <TextView
            android:text="@string/totalIncomes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/labelMoneyType2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.055" app:layout_constraintVertical_bias="0.135"
            android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>